crates/overseer-tui/tests/snapshots/snapshots__guarded_during_run.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: screen(&term)
---










finish or interrupt the run first
finish or interrupt the run first
⠙ working  0s  0 tok  (esc to interrupt)
❯
 workspace  /repo                        test-model · $0.000
