crates/overseer-tui/tests/snapshots/snapshots__panel_keys.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: s
---


❯ ask anything  ·  ↑ panel  ·  ? keys

 dashboard  agents  settings  keys          ↑/↓ · ←/→ · esc
  send
    enter         submit
    ctrl+j        newline
    esc           interrupt / clear

  navigate
    ↑             panel (empty) / history
    pgup/pgdn     scroll
    ctrl+p        sessions
    ctrl+o        search

  edit
    ctrl+w        word
    ctrl+_        undo
