crates/overseer-tui/tests/snapshots/snapshots__permission_dialog.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: screen(&term)
---










permission: bash — outside allowlist
  $ git push origin main
…
❯
 workspace  /repo                        test-model · $0.000
