crates/overseer-tui/tests/snapshots/snapshots__queued_steer.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: screen(&term)
---










⠙ working  0s  0 tok  (esc to interrupt)
❯
 workspace  /repo                        test-model · $0.000
