crates/overseer-tui/tests/snapshots/snapshots__rewind_picker.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: screen(&term)
---










rewind — ↑↓ select · enter restore files+conversation · esc
› e2 · 1 file(s) · fix the flaky test
❯
 workspace  /repo                        test-model · $0.000
