crates/overseer-tui/tests/snapshots/snapshots__run_summary.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: s
---










❯ run the checks
  ● bash  cargo test
  ● read  src/app.rs
    permission denied
                         2 steps · 0s · $0.042 · 42% cached
  ⠹ grep  todo src
⠹ running grep  0s  0 tok  (esc to interrupt)
❯
