crates/overseer-tui/tests/snapshots/snapshots__session_picker.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: picker
---










> ▌
› [ago] · s1 · fix the flaky test
  [ago] · s2 · add a parser
type to filter · ↑↓ · tab preview · enter switch · esc
❯
 workspace  /repo                        test-model · $0.000
