crates/overseer-tui/tests/snapshots/snapshots__session_picker_filtered.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: filtered
---










sessions — type to filter · ↑↓ select · tab preview · enter
> par▌
› [ago] · s2 · add a parser
❯
 workspace  /repo                        test-model · $0.000
